# wit-deps

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  garnix.yaml
.github/: dependabot.yml
.github/actions/build-nix/: action.yml
.github/actions/install-nix/: action.yml
.github/workflows/: depit.yml  nix.yml  wit-deps.yml
crates/depit/: Cargo.toml
crates/depit/src/: cache.rs  lib.rs  lock.rs  manifest.rs
crates/wit-deps/: Cargo.toml
crates/wit-deps/src/: cache.rs  digest.rs  lib.rs  lock.rs  manifest.rs
examples/github/: main.rs
examples/github/wit/: deps.toml  world.wit
examples/http/: main.rs
examples/http/wit/: deps.toml  world.wit
tests/github-build/: Cargo.toml  build.rs
