[package]
name = "wit-deps-cli"
version = "0.5.0"
description = "WIT dependency manager"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/wit-deps-{target}"
pkg-fmt = "bin"
[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{repo}/releases/download/v{version}/wit-deps-{target-arch}-{target-vendor}-{target-family}-musl"
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{repo}/releases/download/v{version}/wit-deps-{target-arch}-{target-vendor}-{target-family}-musl"
[package.metadata.binstall.overrides.armv7-unknown-linux-gnu]
pkg-url = "{repo}/releases/download/v{version}/wit-deps-{target-arch}-{target-vendor}-{target-family}-musleabihf"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
# GNU toolchain should work on windows MSVC targets
pkg-url = "{repo}/releases/download/v{version}/wit-deps-{target-arch}-{target-vendor}-{target-family}-gnu"

[workspace.package]
authors = ["Roman Volosatovs"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wit-deps"

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
camino = { workspace = true }
clap = { workspace = true, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
wit-deps = { workspace = true }
tokio = { workspace = true, features = ["io-std", "fs", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["compat"] }
toml = { workspace = true, features = ["display", "parse"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "json", "std"] }

[dev-dependencies]
build-test = { workspace = true }
wit-bindgen = { workspace = true, features = ["default"] }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-compression = { version = "0.3", default-features = false }
async-tar = { version = "0.5", default-features = false }
async-trait = { version = "0.1", default-features = false }
camino = { version = "1", default-features = false }
clap = { version = "4", default-features = false }
directories = { version = "5", default-features = false }
futures = { version = "0.3", default-features = false }
build-test = { path = "./tests/build" }
hex = { version = "0.4", default-features = false }
reqwest = { version = "0.11", default-features = false }
serde = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
urlencoding = { version = "2.1", default-features = false }
wit-bindgen = { version = "0.37", default-features = false }
wit-deps = { path = "./crates/wit-deps", version = "0.5" }
